--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
         <meta name="description" content="Lawrence Song professional website">
         <title>Lawrence Song</title>
         <link href="./static/imgs/favicon.png" rel="icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
         <!-- General Layout  -->
         <link rel="stylesheet" href="static/css/style.css">
     </head>
     <body style="font-family: Arial">
-        <header style="color:blue; background:lightblue">
-            <h1>Lawrence Song</h1>
+        <header>
+            <h1 id="webname">Lawrence Song</h1>
             <nav>
-                <a href="./index.html">Home</a>
-                <a href="./views/cv.html">CV</a>
-                <a href="./views/contact.html">Contact me</a>
-                <a href="./views/fun.html">For fun</a>
+                <a href="./index.html" class="nav_a">Home</a>
+                <a href="./views/cv.html" class="nav_a">CV</a>
+                <a href="./views/contact.html" class="nav_a">Contact me</a>
+                <a href="./views/fun.html" class="nav_a">For fun</a>
             </nav>
         </header>
         <div class="main">
