--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+        <script src="./static/js/script.js" defer></script>
         <!-- General Layout  -->
         <link rel="stylesheet" href="static/css/style.css">
     </head>
@@ -27,7 +27,7 @@
             </nav>
         </header>
         <div class="main">
-            <h2>Hi, my name is Lawrence</h2>
+            <h2 id="greeting">Hi, my name is Lawrence</h2>
             <p>Hello World!</p>
             <img src="static/imgs/my_photo.jpg" alt="My Photo" id="my_photo"/>
             <p id="intro" attribute="intro">
