--- a/index.html
+++ b/index.html
@@ -15,28 +15,42 @@
         <script src="./static/js/script.js" defer></script>
         <!-- General Layout  -->
         <link rel="stylesheet" href="static/css/style.css">
+
+        <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     </head>
-    <body style="font-family: Arial">
+    <body style="font-family: Arial" onload="addYear()">
         <header>
             <h1 id="webname">Lawrence Song</h1>
             <nav>
-                <a href="./index.html" class="nav_a">Home</a>
-                <a href="./views/cv.html" class="nav_a">CV</a>
-                <a href="./views/contact.html" class="nav_a">Contact me</a>
-                <a href="./views/fun.html" class="nav_a">For fun</a>
+                <a href="./index.html" class="selected">Home</a>
+                <a href="./views/cv.html">CV</a>
+                <a href="./views/contact.html">Contact me</a>
+                <a href="./views/fun.html">For fun</a>
             </nav>
         </header>
         <div class="main">
             <h2 id="greeting">Hi, my name is Lawrence</h2>
-            <p>Hello World!</p>
-            <img src="static/imgs/my_photo.jpg" alt="My Photo" id="my_photo"/>
-            <p id="intro" attribute="intro">
-                My name is Lawrence Song, a current undergraduate student at <b>Carnegie Mellon University</b>. <br/>
-                I am majoring in Information Systems. I am also interested in Computer Science and is currently trying to double major in it.
-            </p>
+            <div id="content">
+                <p>Hello World!</p>
+                <img src="static/imgs/my_photo.jpg" alt="My Photo" id="my_photo" title="My Photo"/>
+                <div id = "intro">
+                    <p class="short_content" attribute="intro">
+                        My name is Lawrence Song, a current undergraduate student at<b>Carnegie Mellon University</b>.
+                        I am majoring in Information Systems. 
+                        I am also interested in Computer Science and is currently trying to double major in it.
+                    </p>
+                    <p class="full_content" attribute="intro">
+                        ......Wow! You extended my bio!
+                        Thank you so much!
+                        I am so glad that you can read more about my introduction.
+                        Feel free to look at my CV in "CV", ask me any question in "Contact Me", or see what I like to do in "For fun"!
+                    </p>
+                    <button class="read_more_or_less" status="Read more" read_more="Read more" read_less="Read less">Read more</button>
+                </div>
+            </div>
         </div>
         <footer>
-            &copy Design and coded by Lawrence Song
+            &copy Design and coded by<b>Lawrence Song</b><p id="copyYear"></p>
         </footer>
     </body>
 </html>
