--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     </head>
-    <body style="font-family: Arial" onload="addYear()">
+    <body style="font-family: Arial" onload="initPage()">
         <header>
             <h1 id="webname">Lawrence Song</h1>
             <nav>
@@ -34,23 +34,26 @@
                 <p>Hello World!</p>
                 <img src="static/imgs/my_photo.jpg" alt="My Photo" id="my_photo" title="My Photo"/>
                 <div id = "intro">
-                    <p class="short_content" attribute="intro">
+                    <p class="short_content">
                         My name is Lawrence Song, a current undergraduate student at<b>Carnegie Mellon University</b>.
                         I am majoring in Information Systems. 
                         I am also interested in Computer Science and is currently trying to double major in it.
                     </p>
-                    <p class="full_content" attribute="intro">
+                    <p class="full_content">
                         ......Wow! You extended my bio!
                         Thank you so much!
                         I am so glad that you can read more about my introduction.
                         Feel free to look at my CV in "CV", ask me any question in "Contact Me", or see what I like to do in "For fun"!
                     </p>
                     <button class="read_more_or_less" status="Read more" read_more="Read more" read_less="Read less">Read more</button>
-                </div>
+                </div> 
             </div>
         </div>
         <footer>
-            &copy Design and coded by<b>Lawrence Song</b><p id="copyYear"></p>
+            &copy; Design and coded by<b>Lawrence Song</b><p id="copyYear"></p><br>
+            <div id="weather_forcast">
+                Weather Forecast: <!--<img id="weather_icon" src="../static/imgs/weather/中雪.png">--> <p id="weather"></p>
+            </div>
         </footer>
     </body>
 </html>
