--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="main">
             <h2 id="greeting">Hi, my name is Lawrence</h2>
             <div id="content">
-                <p>Hello World!</p>
+                <p>Hello World! <a href="./views/template.html">template.html</a></p>
                 <img src="static/imgs/my_photo.jpg" alt="My Photo" id="my_photo" title="My Photo"/>
                 <div id = "intro">
                     <p class="short_content">
