--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
             <h1 id="webname">Lawrence Song</h1>
             <nav>
-                <a href="./index.html" class="selected">Home</a>
+                <a href="./index.html">Home</a>
                 <a href="./views/cv.html">CV</a>
                 <a href="./views/contact.html">Contact me</a>
                 <a href="./views/fun.html">For fun</a>
@@ -45,9 +45,7 @@
                         I am so glad that you can read more about my introduction.
                         Feel free to look at my CV in "CV", ask me any question in "Contact Me", or see what I like to do in "For fun"!
                     </p>
-                    <button class="read_more_or_less" status="Read more" read_more="Read more" read_less="Read less">Read more</button>
-                </div> 
-            </div>
+            </div> 
         </div>
         <footer>
             &copy; Design and coded by<b>Lawrence Song</b><p id="copyYear"></p><br>
